ebnf/expressions.ebnf
expression = 
    simple_expression, [ ( "=" | "<" | ">" | "<=" | ">=" ), simple_expression ]
;

simple_expression = 
    [ "+" | "-" ], term, { [ "+" | "-" ], term }
;

term =
    factor, { ( "**" | "*" | "/" | % ), factor }
;

factor = 
    integer |
    dice_roll |
    function_call |
    bracketed_expression |
    expression_group
;

function_call = 
    identifier, "(", expression, ")"
;

bracketed_expression = 
    "(", expression, ")"
;
